# axiom

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE.md  README.md  STYLE.md  dependency-reduced-pom.xml  pom.xml  premake5.lua
Axiom/: premake5.lua
Axiom/Platform/Linux/: LinuxFileSystem.cpp
Axiom/Platform/Macosx/: MacosxFileSystem.cpp
Axiom/Platform/Windows/: WindowsFileSystem.cpp
Axiom/src/: axpch.h
Axiom/src/Axiom/: Main.cpp
Axiom/src/Axiom/Chat/: ChatComponent.cpp  ChatComponent.h  MiniMessage.cpp
Axiom/src/Axiom/Command/: Command.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandNode.h  CommandRegistry.cpp  CommandRegistry.h  CommandSender.cpp  CommandSender.h  CommandSourceStack.cpp  CommandSourceStack.h  Commands.h  VanillaCommands.cpp  VanillaCommands.h
Axiom/src/Axiom/Command/Commands/: DifficultyCommand.cpp  DifficultyCommand.h  GamemodeCommand.cpp  GamemodeCommand.h  GameruleCommand.cpp  GameruleCommand.h  HelpCommand.cpp  HelpCommand.h  ListCommand.cpp  ListCommand.h  SetWorldSpawnCommand.cpp  SetWorldSpawnCommand.h  TeleportCommand.cpp  TeleportCommand.h  TimeCommand.cpp  TimeCommand.h  WeatherCommand.cpp  WeatherCommand.h
Axiom/src/Axiom/Command/Parsers/: ArgumentParser.h  Parsers.h
Axiom/src/Axiom/Commands/: RestartCommand.cpp  RestartCommand.h  StopCommand.cpp
Axiom/src/Axiom/Config/: AdminFileStore.cpp  AdminFileStore.h  DedicatedProperties.cpp  DedicatedProperties.h  GameRuleEnforcement.cpp  GameRuleEnforcement.h  GameRules.cpp  GameRules.h  ServerConfig.cpp  ServerConfig.h
Axiom/src/Axiom/Core/: Application.cpp  Application.h  AsyncExecutor.cpp  AsyncExecutor.h  AsyncTickable.h  Base.h  Buffer.h  ConsoleInput.cpp  ConsoleInput.h  ConsolePrompt.h  Identifier.h  Log.cpp  Log.h  Observable.h  PathUtil.h  PlatformDetection.h  TaskQueue.cpp  TaskQueue.h  TickRegistry.cpp  TickRegistry.h  TickScheduler.cpp  TickScheduler.h  TickStack.cpp  Tickable.h  Time.h  UUID.h  Watchdog.cpp  Watchdog.h
Axiom/src/Axiom/Data/: DataVersion.cpp  DataVersion.h  LevelStorage.cpp  LevelStorage.h  WorldFormat.h
Axiom/src/Axiom/Data/Format/: AnvilFormat.cpp  AnvilFormat.h  RegionFile.cpp  RegionFile.h  RegionFileStorage.cpp  RegionFileStorage.h
Axiom/src/Axiom/Data/Nbt/: JsonToNbt.h  NbtAccounter.cpp  NbtAccounter.h  NbtByte.h  NbtByteArray.h  NbtCompound.h  (+13 more)
Axiom/src/Axiom/Event/: Event.h  EventBus.cpp  EventBus.h  LevelEvents.h  PlayerEvents.h  ServerEvents.h
Axiom/src/Axiom/Network/: AdminEnforcement.cpp  AdminEnforcement.h  BuiltInRegistries.cpp  BuiltInRegistries.h  Connection.cpp  Connection.h  KeepAliveManager.cpp  KeepAliveManager.h  NetworkBuffer.h  NetworkServer.cpp  NetworkServer.h  PacketBundler.cpp  PacketBundler.h  PlayStateBootstrap.cpp  PlayStateBootstrap.h  Protocol.h  Registry.h  RegistryDataService.cpp  ResourceKey.h  ResourceLocation.h
Axiom/src/Axiom/Physics/: AABB.cpp  AABB.h  PhysicsEngine.cpp  PhysicsEngine.h
Axiom/src/Axiom/Plugin/: CorePlugin.cpp  CorePlugin.h  Plugin.h  PluginManager.h
Axiom/src/Axiom/Resource/: AdvancementManager.cpp  AdvancementManager.h  DatapackLoader.cpp  DatapackLoader.h  LootTableManager.cpp  LootTableManager.h  RecipeManager.cpp  RecipeManager.h  ResourceManager.cpp  ResourceManager.h  TagLoader.cpp  TagLoader.h
Axiom/src/Axiom/Utilities/: FileSystem.cpp  FileSystem.h  Permission.h
Axiom/tests/: ErrorTest.cpp  NetworkBufferErrorTest.cpp  TestFramework.h  TestMain.cpp
axiom-api/: pom.xml
axiom-impl/: pom.xml
axiom-impl/src/main/resources/: axiom.mixins.json  default-config.toml
cmake/: PacketCodegen.cmake
data/: entities.json  items.json  synced_registries.json  tags.json
scripts/: bump-build-count.sh  increment-build.sh  setup.sh
scripts/packet-ids/: 26.1.json
src/: axpch.h
src/Axiom/: Chat.h  Commands.h  Main.cpp
src/Axiom/Chat/: ChatComponent.cpp  ChatComponent.h  MiniMessage.cpp  MiniMessage.h
src/Axiom/Command/: Command.h  CommandRegistry.cpp  CommandRegistry.h  CommandSender.cpp  CommandSender.h
src/Axiom/Commands/: HelpCommand.cpp  HelpCommand.h  StopCommand.h
src/Axiom/Config/: ServerConfig.cpp  ServerConfig.h
src/Axiom/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Error.h  ExampleAsyncSystem.cpp  ExampleAsyncSystem.h  Log.cpp  Log.h  Math.h  PathUtil.h  PlatformDetection.h  TickStack.cpp  TickStack.h  Tickable.h  Time.h  Timer.h  Timestep.h  UUID.cpp  UUID.h
src/Axiom/Environment/Block/: Block.h
src/Axiom/Environment/Entity/: Entity.h  LivingEntity.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h
src/Axiom/Environment/Item/: Item.h  ItemBlock.h
src/Axiom/Environment/Level/: Chunk.cpp  Chunk.h  ChunkEncoder.h  ChunkManager.cpp  ChunkManager.h  Dimension.cpp  Dimension.h  DimensionType.cpp  DimensionType.h  Level.cpp  Level.h  LevelRegistry.cpp  LevelTime.cpp  LevelTime.h
src/Axiom/Environment/World/: BiomeEncoder.h  Chunk.h  ChunkEncoder.h  ChunkManager.cpp  ChunkManager.h  FlatChunkGenerator.h  World.cpp  World.h  WorldTime.cpp  WorldTime.h
src/Axiom/Event/: Event.h  EventBus.cpp  EventBus.h  ServerEvents.h
src/Axiom/Network/: Connection.cpp  Connection.h  KeepAliveManager.cpp  KeepAliveManager.h  NetworkBuffer.h  NetworkServer.cpp  NetworkServer.h  PacketHandler.cpp  PacketHandler.h  Protocol.h  RegistryDataService.cpp  RegistryDataService.h
src/Axiom/Network/Crypto/: AesCipher.cpp  AesCipher.h  MinecraftHash.h  MojangAuth.cpp  MojangAuth.h  ServerKeyPair.h
src/Axiom/Network/Nbt/: JsonToNbt.h  NbtReader.h
src/Axiom/Network/Packet/: ClientboundPacket.h  PacketContext.cpp  PacketContext.h  PacketEvents.h  PacketMacros.h  PacketRegistry.h  PacketVersioned.h  ServerboundPacket.h
src/Axiom/Plugin/: CorePlugin.cpp  Plugin.h  PluginContext.h  PluginManager.cpp  PluginManager.h
src/Axiom/World/: ChunkEncoder.h
src/main/resources/: axiom.mixins.json  fabric.mod.json
tests/: ChunkTest.cpp  CommandRegistryTest.cpp  EventBusTest.cpp  NetworkBufferTest.cpp  PacketMacroTest.cpp  PacketRoundTripTest.cpp  TestFramework.h
tools/codegen/: generate_packets.py
(+752 files in other folders)
